--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -7,5 +7,4 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 
 [dependencies]
 serde = "1.0.70"
-serde_derive = "1.0.70"
-bincode = "1.0.1"
+bincode = { path = "../bincode" }
