added common library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ description = "The implementation of a Lightning Network node"
 license = "Apache-2.0"
 authors = ["LightningPeach <contact@lightningpeach.com>"]
 
+[lib]
+name = "ldp"
+
 [dependencies]
 wire = { path = "wire" }
