--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bincode"]
 	path = bincode
-	url = https://github.com/TyOverby/bincode.git
+	url = https://github.com/LightningPeach/bincode.git
