added message struct, added serde facade, simplified tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 [lib]
 name = "lpd"
 
+[[example]]
+name = "wasm-basic"
+crate-type = ["cdylib"]
+
 [dependencies]
 wire = { path = "wire" }
 
