added wasm-basic example, tested on chrome

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ name = "lpd"
 name = "wasm-basic"
 crate-type = ["cdylib"]
 
+[[example]]
+name = "wasm-runner"
+
 [dependencies]
 wire = { path = "wire" }
 
