--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["../lpd", "bincode", "wire"]
+members = ["../lpd", "bincode", "wire", "brontide"]
 
 [package]
 name = "lpd"
@@ -20,6 +20,11 @@ name = "wasm-runner"
 
 [dependencies]
 wire = { path = "wire" }
+brontide = { path = "brontide" }
+
+rand = "0.5.4"
+secp256k1 = "0.9.2"
+hex = "0.3.2"
 
 [dev-dependencies]
 serde_derive = "1.0.70"
