--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -12,6 +12,7 @@ name = "wire"
 serde = "1"
 serde_derive = "1"
 bincode = { path = "../bincode" }
+bitflags = "1"
 
 [dev-dependencies]
 rand = "0.5"
