--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -13,6 +13,7 @@ serde = "1"
 serde_derive = "1"
 bincode = { path = "../bincode" }
 bitflags = "1"
+secp256k1 = "0.9.2"
 
 [dev-dependencies]
 rand = "0.5"
