--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ shachain = { path = "shachain" }
 rand = "0.5.4"
 secp256k1 = "0.9.2"
 hex = "0.3.2"
+serde = "1"
 
 [dev-dependencies]
 serde_derive = "1.0.70"
