added script for running lnd with proper params

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ crate-type = ["cdylib"]
 [[example]]
 name = "wasm-runner"
 
+[[example]]
+name = "run-lnd"
+
 [dependencies]
 wire = { path = "wire" }
 
