--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["../lpd", "bincode", "wire", "brontide", "shachain"]
+members = ["../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain"]
 
 [package]
 name = "lpd"
@@ -25,6 +25,7 @@ name = "run-lnd"
 wire = { path = "wire" }
 brontide = { path = "brontide" }
 shachain = { path = "shachain" }
+hdkeychain = { path = "hdkeychain" }
 
 rand = "0.5.4"
 secp256k1 = "0.9.2"
