--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain"]
+members = ["../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain", "wallet"]
 
 [package]
 name = "lpd"
@@ -26,6 +26,7 @@ wire = { path = "wire" }
 brontide = { path = "brontide" }
 shachain = { path = "shachain" }
 hdkeychain = { path = "hdkeychain" }
+wallet = { path = "wallet" }
 
 rand = "0.5.4"
 secp256k1 = "0.9.2"
