--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
 bitcoin = "0.13.2"
 secp256k1 = "0.9.2"
 hex = "0.3.2"
+wire = { path = "../wire" }
