--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ name = "wasm-runner"
 [[example]]
 name = "run-lnd"
 
+
 [dependencies]
 wire = { path = "wire" }
 brontide = { path = "brontide" }
@@ -31,6 +32,9 @@ rand = "0.5.4"
 secp256k1 = "0.9.2"
 hex = "0.3.2"
 serde = "1"
+
+bitcoin = "0.13.2"
+rust-crypto = "0.2.36"
 
 [dev-dependencies]
 serde_derive = "1.0.70"
