--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ wire = { path = "wire" }
 brontide = { path = "brontide" }
 shachain = { path = "shachain" }
 hdkeychain = { path = "hdkeychain" }
+channel = { path = "channel" }
 
 rand = "0.5.4"
 secp256k1 = "0.9.2"
