--- a/channel/Cargo.toml
+++ b/channel/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Mykola Sakhno <mykola.sakhno@bitfury.com>"]
 description = "The implementation of a Lightning channel"
 license = "Apache-2.0"
 
+[lib]
+name = "channel"
+
 [dependencies]
 rand = "0.5.4"
 secp256k1 = "0.9.2"
