--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -17,7 +17,8 @@ secp256k1 = "0.9.2"
 rand = "0.5"
 sha2 = "0.7.1"
 flate2 = "1"
-hex-literal = "0.1.1"
+common-types = { path = "../common-types" }
+bitcoin-types = { path = "../bitcoin-types" }
 
 [dev-dependencies]
 hex = "0.3.2"
