--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 secp256k1 = "0.9.2"
 wire = { path = "../wire" }
 brontide = { path = "../brontide" }
+common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
 
 [dev-dependencies]
