--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -20,5 +20,8 @@ flate2 = "1"
 common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
 
-[dev-dependencies]
 hex = "0.3.2"
+hex-literal = "0.1.1"
+
+[features]
+testing = []
