--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -23,5 +23,9 @@ bitcoin-types = { path = "../bitcoin-types" }
 hex = "0.3.2"
 hex-literal = "0.1.1"
 
+[dev-dependencies]
+common-types = { path = "../common-types", features = ["testing"] }
+
+
 [features]
 testing = []
