--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
     "../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain",
-    "routing", "bitcoin-types", "common-types"
+    "routing", "bitcoin-types", "common-types",
+    "testenv"
 ]
 
 [package]
