--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ shachain = { path = "shachain" }
 hdkeychain = { path = "hdkeychain" }
 channel = { path = "channel" }
 wallet = { path = "wallet" }
+routing = { path = "routing" }
 
 rand = "0.5.4"
 secp256k1 = "0.9.2"
