--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -11,6 +11,8 @@ common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
 chrono = "0.4.5"
 rand = "0.5.4"
+actix = "0.7.4"
+actix_derive = "0.3.0"
 
 [dev-dependencies]
 hex = "0.3.2"
