--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ name = "run-lnd"
 
 
 [dependencies]
-wire = { path = "wire" }
+wire = { path = "wire", features = ["testing"] }
 brontide = { path = "brontide" }
 shachain = { path = "shachain" }
 hdkeychain = { path = "hdkeychain" }
@@ -38,6 +38,7 @@ routing = { path = "routing" }
 rand = "0.5.4"
 secp256k1 = "0.9.2"
 hex = "0.3.2"
+hex-literal = "0.1.1"
 serde = "1"
 
 bitcoin = "0.13.2"
