--- a/common-types/Cargo.toml
+++ b/common-types/Cargo.toml
@@ -7,9 +7,10 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 serde = "1"
 serde_derive = "1"
 rand = "0.5"
-sha2 = "0.7.1"
+sha2 = "0.7.*"
 hex-literal = "0.1.1"
 hex = "0.3.2"
+secp256k1 = "0.9.*"
 
 [features]
 testing = []
