--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -16,6 +16,7 @@ bitflags = "1"
 secp256k1 = "0.9.2"
 rand = "0.5"
 sha2 = "0.7.1"
+digest = "0.7.*"
 flate2 = "1"
 common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
