--- a/brontide/Cargo.toml
+++ b/brontide/Cargo.toml
@@ -13,7 +13,8 @@ hkdf = "0.5.0"
 hex = "0.3.2"
 crossbeam = "0.3.2"
 
-wire = { path = "../wire" }
+tokio-core = "0.1.17"
+futures = "0.1.24"
 
 [features]
 testing = []
