--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -18,6 +18,7 @@ rand = "0.5"
 sha2 = "0.7.1"
 digest = "0.7.*"
 flate2 = "1"
+tokio = "0.1.11"
 common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
 
@@ -26,7 +27,6 @@ hex-literal = "0.1.1"
 
 [dev-dependencies]
 common-types = { path = "../common-types", features = ["testing"] }
-
 
 [features]
 testing = []
