--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -16,6 +16,7 @@ specs-derive = "0.2.0"
 shred = "0.7.0"
 shred-derive = "0.5.0"
 rayon = "1.0.2"
+tokio = "0.1.11"
 
 [dev-dependencies]
 hex = "0.3.2"
