--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,8 @@ rand = "0.5.4"
 secp256k1 = "0.9.2"
 hex = "0.3.2"
 hex-literal = "0.1.1"
-serde = "1"
+tokio = "0.1.11"
+futures = "0.1.25"
 
 bitcoin = "0.13.2"
 rust-crypto = "0.2.36"
