--- a/onion/Cargo.toml
+++ b/onion/Cargo.toml
@@ -10,6 +10,9 @@ hmac = "0.6.3"
 chacha = "0.1.0"
 bytes = "0.4.10"
 rand = "0.5.5"
+sha2 = "0.7.1"
+serde = "1.0.80"
+serde_derive = "1.0.80"
 
 wire = { path = "../wire" }
 common-types = { path = "../common-types" }
