--- a/onion/Cargo.toml
+++ b/onion/Cargo.toml
@@ -13,6 +13,7 @@ rand = "0.5.5"
 sha2 = "0.7.1"
 serde = "1.0.80"
 serde_derive = "1.0.80"
+smallvec = { version = "0.6.5", features = ["serde"] }
 
 wire = { path = "../wire" }
 common-types = { path = "../common-types" }
