[LNP-811] Changed crates structure; * rpc/interface crate contains generated code and proto files; * other crates use rpc/interface, other crates should not use both rpc/implementation and rpc/server; * other crates should have `rpc` feature to isolate such code * rpc/implementation crate uses rpc/interface and other crates to collect the implementation; * rpc/server crate uses rpc/implementation it is glue to the system; It is possible to add glue to some other system, it might either use rpc/implementation or provide its own types similarly to present solution.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "../lpd", "bincode", "wire", "brontide", "shachain", "chainntfs", "channel", "wallet",
     "routing", "bitcoin-types", "common-types",
-    "testenv", "rpc-server"
+    "testenv", "rpc/interface", "rpc/implementation", "rpc/server"
 ]
 
 [package]
