--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 
 [dependencies]
 secp256k1 = "0.9.2"
+interface = { path = "../rpc/interface", optional = true }
 wire = { path = "../wire" }
 brontide = { path = "../brontide" }
 common-types = { path = "../common-types" }
@@ -23,3 +24,6 @@ hex = "0.3.2"
 hex-literal = "0.1.1"
 brontide = { path = "../brontide", features = ["testing"] }
 wire = { path = "../wire", features = ["testing"] }
+
+[features]
+rpc = ["interface"]
