--- a/rpc/implementation/Cargo.toml
+++ b/rpc/implementation/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 grpc = "0.6.*"
 
 interface = { path = "../interface" }
-routing = { path = "../../routing" }
+routing = { path = "../../routing", features = ["rpc"] }
 wire = { path = "../../wire" }
