--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -18,6 +18,9 @@ shred = "0.7.0"
 shred-derive = "0.5.0"
 rayon = "1.0.2"
 tokio = "0.1.11"
+rocksdb = "0.10.1"
+serde = "1.0.80"
+serde_derive = "1.0.80"
 
 [dev-dependencies]
 hex = "0.3.2"
