[LNP-986] Added mutex for db, added error checking for db ops

--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "server"
-version = "0.1.0"
-authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
+version = "0.0.0"
+authors = ["LightningPeach <contact@lightningpeach.com>"]
 
 [[bin]]
 name = "server"
