--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -21,6 +21,7 @@ flate2 = "1"
 tokio = "0.1.11"
 common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
+binformat = { path = "../binformat" }
 
 hex = "0.3.2"
 hex-literal = "0.1.1"
