--- a/brontide/Cargo.toml
+++ b/brontide/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["BitfuryLightning <lightning@bitfury.com>"]
 
 [dependencies]
-rand = "0.5.4"
-secp256k1 = "0.9.2"
+rand = "0.4"
+secp256k1 = { version = "0.12", features = ["rand", "serde"] }
 sha2 = "0.7.1"
 byteorder = "1.2.3"
 chacha20-poly1305-aead = "0.1.2"
@@ -18,6 +18,7 @@ tokio = "0.1.11"
 bytes = "0.4.10"
 
 wire = { path = "../wire" }
+binformat = { path = "../binformat" }
 
 [features]
 testing = []
