--- a/rpc/implementation/Cargo.toml
+++ b/rpc/implementation/Cargo.toml
@@ -2,6 +2,7 @@
 name = "implementation"
 version = "0.0.0"
 authors = ["LightningPeach <contact@lightningpeach.com>"]
+edition = "2018"
 
 [dependencies]
 grpc = "0.6.*"
@@ -9,3 +10,5 @@ grpc = "0.6.*"
 interface = { path = "../interface" }
 routing = { path = "../../routing", features = ["rpc"] }
 wire = { path = "../../wire" }
+connection = { path = "../../connection" }
+state = { path = "../../state" }
