--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 brontide = { path = "../brontide" }
+binformat = { path = "../binformat" }
 wire = { path = "../wire" }
 state = { path = "../state" }
 routing = { path = "../routing" }
