--- a/bitcoin-types/Cargo.toml
+++ b/bitcoin-types/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "bitcoin-types"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["LightningPeach <contact@lightningpeach.com>"]
+edition = "2018"
 
 [dependencies]
-serde = "1"
-serde_derive = "1"
-rand = "0.5"
-sha2 = "0.7.1"
+serde = "1.0"
+serde_derive = "1.0"
 common-types = { path = "../common-types" }
