--- a/brontide/Cargo.toml
+++ b/brontide/Cargo.toml
@@ -2,20 +2,20 @@
 name = "brontide"
 version = "0.1.0"
 authors = ["BitfuryLightning <lightning@bitfury.com>"]
+edition = "2018"
 
 [dependencies]
 rand = "0.4"
 secp256k1 = { version = "0.12", features = ["rand", "serde"] }
-sha2 = "0.7.1"
-byteorder = "1.2.3"
-chacha20-poly1305-aead = "0.1.2"
-hkdf = "0.5.0"
-hex = "0.3.2"
-crossbeam = "0.3.2"
-serde = "1.0.80"
+sha2 = "0.8"
+byteorder = "1.2"
+chacha20-poly1305-aead = "0.1"
+hkdf = "0.7"
+hex = "0.3"
+serde = "1.0"
 
-tokio = "0.1.11"
-bytes = "0.4.10"
+tokio = "0.1"
+bytes = "0.4"
 
 wire = { path = "../wire" }
 binformat = { path = "../binformat" }
