--- a/common-types/Cargo.toml
+++ b/common-types/Cargo.toml
@@ -2,15 +2,16 @@
 name = "common-types"
 version = "0.0.0"
 authors = ["LightningPeach <contact@lightningpeach.com>"]
+edition = "2018"
 
 [dependencies]
-serde = "1"
-serde_derive = "1"
-rand = "0.5"
-sha2 = "0.7.*"
-hex-literal = "0.1.1"
-hex = "0.3.2"
-secp256k1 = "0.9.*"
+serde = "1.0"
+serde_derive = "1.0"
+rand = "0.6"
+sha2 = "0.8"
+hex = "0.3"
+hex-literal = "0.1"
+secp256k1 = "0.12"
 
 [features]
 testing = []
