--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -1,34 +1,24 @@
 [package]
 name = "routing"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["LightningPeach <contact@lightningpeach.com>"]
+edition = "2018"
 
 [dependencies]
-secp256k1 = "0.9.2"
 state = { path = "../state" }
 interface = { path = "../rpc/interface", optional = true }
 wire = { path = "../wire" }
 binformat = { path = "../binformat" }
-brontide = { path = "../brontide" }
-common-types = { path = "../common-types" }
-bitcoin-types = { path = "../bitcoin-types" }
 dijkstras_search = { git = "https://github.com/LightningPeach/dijkstras_search" }
-chrono = "0.4.5"
-rand = "0.5.4"
-specs = "0.12.2"
-specs-derive = "0.2.0"
-shred = "0.7.0"
-shred-derive = "0.5.0"
-rayon = "1.0.2"
-tokio = "0.1.11"
-rocksdb = "0.10.1"
-serde = "1.0.80"
-serde_derive = "1.0.80"
-hex = "0.3.2"
+specs = "0.14"
+specs-derive = "0.4"
+tokio = "0.1"
+rocksdb = "0.10"
+serde = "1.0"
+serde_derive = "1.0"
 
 [dev-dependencies]
 hex-literal = "0.1.1"
-brontide = { path = "../brontide", features = ["testing"] }
 wire = { path = "../wire", features = ["testing"] }
 
 [features]
