refactored message consumer, added event support into message consumer

--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -20,6 +20,7 @@ tokio = "0.1"
 hex = "0.3"
 hex-literal = "0.1"
 rand = "0.6"
+either = "1.5.0"
 
 bincode = { path = "../bincode" }
 common-types = { path = "../common-types" }
