--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -16,6 +16,7 @@ tokio = "0.1"
 rocksdb = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
+either = "1.5.0"
 
 [dev-dependencies]
 hex-literal = "0.1.1"
