--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "../lpd", "bincode", "wire", "brontide", "shachain", "chainntfs", "channel", "wallet",
     "routing", "bitcoin-types", "common-types",
-    "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat"
+    "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
+    "processor"
 ]
 
 [package]
