--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 brontide = { path = "../brontide" }
 binformat = { path = "../binformat" }
 wire = { path = "../wire" }
+processor = { path = "../processor" }
 state = { path = "../state" }
 interface = { path = "../rpc/interface", optional = true }
 routing = { path = "../routing", features = ["rpc"] }
@@ -24,6 +25,7 @@ serde_derive = "1.0"
 
 hex = "0.3.2"
 either = "1.5.0"
+chrono = "0.4"
 
 [features]
 rpc = ["interface"]
