--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -16,7 +16,8 @@ tokio = "0.1"
 rocksdb = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
-either = "1.5.0"
+either = "1.5"
+processor = { path = "../processor" }
 
 [dev-dependencies]
 hex-literal = "0.1.1"
