--- a/processor/Cargo.toml
+++ b/processor/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 [dependencies]
 either = "1.5"
 tokio = "0.1"
+futures = "0.1"
 binformat = { path = "../binformat" }
 wire = { path = "../wire" }
