--- a/binformat/Cargo.toml
+++ b/binformat/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 bincode = { path = "../bincode" }
 flate2 = "1.0"
 serde = "1.0"
+secp256k1 = { version = "0.12", optional = true }
