--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -12,6 +12,7 @@ processor = { path = "../processor" }
 state = { path = "../state" }
 interface = { path = "../rpc/interface", optional = true }
 routing = { path = "../routing", features = ["rpc"] }
+common-types = { path = "../common-types" }
 
 secp256k1 = "0.12"
 
