--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -13,17 +13,17 @@ name = "wire"
 serde = "1.0"
 serde_derive = "1.0"
 bitflags = "1.0"
-secp256k1 = "0.12"
+secp256k1 = { version = "0.12", features = ["serde", "rand"] }
 sha2 = "0.8"
 digest = "0.8"
 hex = "0.3"
 hex-literal = "0.1"
-rand = "0.6"
+rand = "0.4"
 
 bincode = { path = "../bincode" }
 common-types = { path = "../common-types" }
 bitcoin-types = { path = "../bitcoin-types" }
-binformat = { path = "../binformat" }
+binformat = { path = "../binformat", features = ["secp256k1"] }
 
 [dev-dependencies]
 common-types = { path = "../common-types", features = ["testing"] }
