--- a/testenv/Cargo.toml
+++ b/testenv/Cargo.toml
@@ -2,12 +2,15 @@
 name = "testenv"
 version = "0.1.0"
 authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
+edition = "2018"
 
 [dependencies]
 wire = { path = "../wire" }
 brontide = { path = "../brontide" }
-lnd-rust = "0.3.3"
-grpc = "0.5.0"
-futures = "0.1.23"
-lazycell = "1.0.0"
-hex = "0.3.2"
+lnd-rust = "0.3"
+grpc = "0.5"
+futures = "0.1"
+lazycell = "1.2"
+hex = "0.3"
+bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
+bitcoin = "0.14.0"
