--- a/testenv/Cargo.toml
+++ b/testenv/Cargo.toml
@@ -14,3 +14,4 @@ lazycell = "1.2"
 hex = "0.3"
 bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
 bitcoin = "0.14.0"
+client = { path = "../rpc/client" }
