--- a/testenv/Cargo.toml
+++ b/testenv/Cargo.toml
@@ -15,3 +15,4 @@ hex = "0.3"
 bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
 bitcoin = "0.14.0"
 client = { path = "../rpc/client" }
+interface = { path = "../rpc/interface" }
