--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain", "chainntfs", "channel", "wallet",
     "routing", "bitcoin-types", "common-types",
     "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
-    "processor", "onion"
+    "processor", "onion", "channel_machine"
 ]
 
 [package]
