--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "../lpd", "bincode", "wire", "brontide", "shachain", "hdkeychain", "chainntfs", "channel", "wallet",
+    "../lpd", "bincode", "wire", "brontide", "shachain", "chainntfs", "channel", "wallet",
     "routing", "bitcoin-types", "common-types",
     "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
     "processor", "onion", "channel_machine"
@@ -16,9 +16,9 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 [lib]
 name = "lpd"
 
-[[example]]
-name = "wasm-basic"
-crate-type = ["cdylib"]
+#[[example]]
+#name = "wasm-basic"
+#crate-type = ["cdylib"]
 
 [[example]]
 name = "wasm-runner"
@@ -30,20 +30,19 @@ name = "run-lnd"
 wire = { path = "wire", features = ["testing"] }
 brontide = { path = "brontide" }
 shachain = { path = "shachain" }
-hdkeychain = { path = "hdkeychain" }
 chainntfs = { path = "chainntfs" }
 channel = { path = "channel" }
 wallet = { path = "wallet" }
 routing = { path = "routing" }
 
 rand = "0.5.4"
-secp256k1 = "0.9.2"
+secp256k1 = "0.12"
 hex = "0.3.2"
 hex-literal = "0.1.1"
 tokio = "0.1.11"
 futures = "0.1.25"
 
-bitcoin = "0.13.2"
+bitcoin = "0.16"
 rust-crypto = "0.2.36"
 
 serde = "1.0"
