--- a/chainntfs/Cargo.toml
+++ b/chainntfs/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
 
 [dependencies]
-bitcoin = "0.14.2"
+bitcoin = "0.16"
 zmq = "0.8.2"
-bitcoin_rpc_client = "0.2.0"
+bitcoin_rpc_client = { path = "../../bitcoinrpc-rust-client" }
 futures = "0.1.13"
 tokio-core = "0.1.7"
