--- a/rpc/client/Cargo.toml
+++ b/rpc/client/Cargo.toml
@@ -17,5 +17,6 @@ tls-api-native-tls = "0.1.*"
 tls-api-stub = "0.1.*"
 httpbis = "0.7.*"
 futures = "0.1.*"
+native-tls = "0.2"
 
 interface = { path = "../interface" }
