fix issue with tls
After update lnd use tls.cert instead of rpc.cert. Add trace prints.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ name = "wasm-runner"
 [[example]]
 name = "run-lnd"
 
+[[example]]
+name = "e1"
+
 [dependencies]
 wire = { path = "wire", features = ["testing"] }
 brontide = { path = "brontide" }
