add TransportError type

--- a/brontide/Cargo.toml
+++ b/brontide/Cargo.toml
@@ -21,5 +21,9 @@ wire = { path = "../wire" }
 binformat = { path = "../binformat" }
 common-types = { path = "../common-types" }
 
+[[bin]]
+name = "main"
+path = "src/main_.rs"
+
 [features]
 testing = []
