--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -13,9 +13,12 @@ tls-api-native-tls = "0.1.2"
 httpbis = "0.7.*"
 native-tls = "0.2"
 ctrlc = "3.1"
+secp256k1 = "0.12"
+hex = "0.3"
 
 futures = "0.1"
 
 bitcoin = "0.14"
 
 implementation = { path = "../implementation" }
+connection = { path = "../../connection" }
