fixed serde error

--- a/common-types/Cargo.toml
+++ b/common-types/Cargo.toml
@@ -5,8 +5,7 @@ authors = ["LightningPeach <contact@lightningpeach.com>"]
 edition = "2018"
 
 [dependencies]
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 rand = "0.6"
 sha2 = "0.8"
 digest = "0.8"
