--- a/onion/Cargo.toml
+++ b/onion/Cargo.toml
@@ -11,8 +11,7 @@ hmac = "0.7"
 chacha = "0.3"
 bytes = "0.4"
 sha2 = "0.8.0"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 wire = { path = "../wire" }
 binformat = { path = "../binformat" }
