--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
 
 [dependencies]
 bitcoin = "0.18"
+bitcoin_hashes = "0.3"
 secp256k1 = "0.12"
 hex = "0.3.2"
 wire = { path = "../wire" }
