add new crate for internal events; add dummy rpc for open channel; fix some warnings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ members = [
     "../lpd", "bincode", "wire", "brontide", "shachain", "chainntfs", "channel", "wallet",
     "routing", "bitcoin-types", "common-types",
     "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
-    "processor", "onion", "channel_machine", "wire-compatibility",
-    "cmd/dump-reader",
+    "processor", "onion", "channel_machine", "internal-event",
+    "wire-compatibility", "cmd/dump-reader",
 ]
 exclude = ["electrs"]
 
