--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -18,6 +18,7 @@ hex = "0.3"
 hex-literal = "0.1"
 rand = "0.4"
 bitcoin_hashes = "0.3"
+byteorder = "1.3"
 
 bincode = { path = "../bincode" }
 common-types = { path = "../common-types" }
