secp256k1 wrapper initial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "routing", "bitcoin-types", "common-types",
     "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
     "processor", "onion", "channel_machine", "internal-event",
-    "wire-compatibility", "cmd/dump-reader",
+    "wire-compatibility", "cmd/dump-reader", "secp256k1"
 ]
 exclude = ["electrs"]
 
