--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,31 @@
 [workspace]
 members = [
-    "../lpd", "bincode", "wire", "brontide", "shachain", "chainntfs", "channel", "wallet",
-    "routing", "bitcoin-types", "common-types",
-    "testenv", "rpc/interface", "rpc/implementation", "rpc/server", "rpc/client", "connection", "state", "binformat",
-    "processor", "onion", "channel_machine", "internal-event",
-    "wire-compatibility", "cmd/dump-reader", "secp256k1", "bitcoin",
+    "../lpd",
+    "bincode",
+    "wire",
+    "brontide",
+    "shachain",
+    "chainntfs",
+    "channel",
+    "wallet",
+    "routing",
+    "bitcoin-types",
+    "common-types",
+    "testenv",
+    "rpc/interface",
+    "rpc/implementation",
+    "rpc/server",
+    "rpc/client",
+    "connection",
+    "state",
+    "binformat",
+    "processor",
+    "onion",
+    "channel_machine",
+    "internal-event",
+    "wire-compatibility",
+    "cmd/dump-reader",
+    "secp256k1",
 ]
 exclude = ["electrs"]
 
