--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -17,7 +17,7 @@ routing = { path = "../routing", features = ["rpc"] }
 channel_machine = { path = "../channel_machine" }
 common-types = { path = "../common-types" }
 
-secp256k1 = "0.12"
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust" }
 
 tokio = "0.1"
 futures = "0.1"
