--- a/internal-event/Cargo.toml
+++ b/internal-event/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 wire = { path = "../wire" }
 
-secp256k1 = "0.12"
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust" }
