--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -19,10 +19,10 @@ rocksdb = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
 either = "1.5"
-secp256k1 = "0.12"
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust" }
 
 [dev-dependencies]
-hex-literal = "0.1.1"
+hex-literal = "0.2"
 wire = { path = "../wire", features = ["testing"] }
 
 [features]
