--- a/rpc/implementation/Cargo.toml
+++ b/rpc/implementation/Cargo.toml
@@ -14,9 +14,9 @@ internal-event = { path = "../../internal-event" }
 connection = { path = "../../connection", features = ["rpc"] }
 state = { path = "../../state" }
 wallet_lib = { package = "wallet", git = "https://github.com/LightningPeach/rust-wallet.git" }
-bitcoin = "0.18"
-bitcoin_hashes = "0.3"
+bitcoin = { git = "https://github.com/LightningPeach/rust-bitcoin.git" }
+bitcoin_hashes = "0.7"
 
 futures = "0.1"
 hex = "0.3"
-secp256k1 = "0.12"
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust" }
