--- a/wire/Cargo.toml
+++ b/wire/Cargo.toml
@@ -13,11 +13,11 @@ name = "wire"
 serde = "1.0"
 serde_derive = "1.0"
 bitflags = "1.0"
-secp256k1 = { version = "0.12", features = ["serde", "rand"] }
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust", features = ["rand"] }
 hex = "0.3"
-hex-literal = "0.1"
-rand = "0.4"
-bitcoin_hashes = "0.3"
+hex-literal = "0.2"
+rand = "0.6"
+bitcoin_hashes = "0.7"
 byteorder = "1.3"
 
 bincode = { path = "../bincode" }
