--- a/onion/Cargo.toml
+++ b/onion/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 hex = "0.3"
-secp256k1 = { version = "0.12", features = ["rand", "serde"] }
+secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust", features = ["rand"] }
 hmac = "0.7"
 chacha = "0.3"
 bytes = "0.4"
@@ -18,5 +18,5 @@ binformat = { path = "../binformat" }
 common-types = { path = "../common-types" }
 
 [dev-dependencies]
-rand = "0.4"
+rand = "0.6"
 wire = { path = "../wire", features = ["testing"] }
