--- a/rpc/client/Cargo.toml
+++ b/rpc/client/Cargo.toml
@@ -12,9 +12,8 @@ name = "client"
 
 [dependencies]
 grpc = "0.6.*"
-tls-api = "0.2.0"
-tls-api-native-tls = "0.2.0"
-tls-api-stub = "0.2.0"
+tls-api = "^0.1"
+tls-api-rustls = "^0.1.0"
 httpbis = "0.7.*"
 futures = "0.1.*"
 native-tls = "0.2.3"
