LNP-1537 LNP-1539 use bitcoin_hashes only
1. Previously several libraries were used for hashing.
Now only `bitcoin_hashes` is used.
2. Fix autocomplete in IDE by using `pub extern crate` instead of `pub use`

--- a/dependencies/Cargo.toml
+++ b/dependencies/Cargo.toml
@@ -11,8 +11,8 @@ bitcoin_hashes = "0.7"
 bitcoin = { git = "https://github.com/LightningPeach/rust-bitcoin.git" }
 rand = "0.6"
 hex = "0.3"
+typenum = "1.11"
 flate2 = "1.0"
-sha2 = "0.8"
 byteorder = "1.2"
 chacha20-poly1305-aead = "0.1"
 hkdf = "0.7"
