--- a/shachain/Cargo.toml
+++ b/shachain/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 [dependencies]
 dependencies = { path = "../dependencies" }
 common-types = { path = "../common-types" }
+state = { path = "../state" }
+serde = { version = "1.0", features = ["derive"] }
