LNP-1706 compute version string

--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -13,3 +13,7 @@ structopt = "0.3"
 dependencies = { path = "../../dependencies" }
 implementation = { path = "../implementation" }
 connection = { path = "../../connection" }
+
+[build-dependencies]
+chrono = "0.4"
+rustc_version = "0.2"
