--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -13,7 +13,9 @@ structopt = "0.3"
 dependencies = { path = "../../dependencies" }
 implementation = { path = "../implementation" }
 connection = { path = "../../connection" }
+base32 = "0.4"
 
 [build-dependencies]
 chrono = "0.4"
 rustc_version = "0.2"
+base32 = "0.4"
