LNP-1722 use structopt in client

--- a/rpc/client/Cargo.toml
+++ b/rpc/client/Cargo.toml
@@ -12,5 +12,7 @@ name = "client"
 
 [dependencies]
 grpc = "0.6.*"
+structopt = "0.3"
 dependencies = { path = "../../dependencies" }
 interface = { path = "../interface" }
+
