LNP-1706 refactor build info functionality into a separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ members = [
     "internal-event",
     "wire-compatibility",
     "cmd/dump-reader",
-    "dependencies"
+    "dependencies",
+    "build_info"
 ]
 exclude = ["electrs"]
 
