LNP-1790 add server's `BuildInfo`

--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -20,7 +20,10 @@ interface = { path = "../rpc/interface", optional = true }
 routing = { path = "../routing", features = ["rpc"] }
 channel_machine = { path = "../channel_machine" }
 common-types = { path = "../common-types" }
-
+build_info = { path = "../build_info" }
 
 [features]
 rpc = ["interface"]
+
+[build-dependencies]
+build_info = { path = "../build_info" }
